:fire: Registro de Tiempo

--- a/contenido/pag01.html
+++ b/contenido/pag01.html
@@ -15,10 +15,10 @@
         </span>
         <div id="cont-billetes">
             <figure class="billetes">
-                <img src="../build/img/contenido/Pag01/billetes.svg" alt="Billetes">
+                <img src="./build/img/contenido/Pag01/billetes.svg" alt="Billetes">
             </figure>
             <figure class="personaje1">
-                <img src="../build/img/contenido/Pag01/personaje.svg" alt="Personaje">
+                <img src="./build/img/contenido/Pag01/personaje.svg" alt="Personaje">
             </figure>
         </div>
         <div id="cont-instrucciones">
@@ -27,7 +27,7 @@
                 Para ver los temas de este curso da clic en el botón de hamburguesa en la esquina superior.
             </span>
             <figure class="mano-pag01">
-                <img src="../build/img/contenido/Pag01/boton.svg" alt="Boton">
+                <img src="./build/img/contenido/Pag01/boton.svg" alt="Boton">
             </figure>
         </div>
     </div>
@@ -35,7 +35,7 @@
         <span id="texto">En este curso, aprenderás los siguientes temas:</span>
         <div id="contenedor">
             <figure class="circulo">
-                <img src="../build/img/contenido/Pag01/circulo.svg" alt="Circulo">
+                <img src="./build/img/contenido/Pag01/circulo.svg" alt="Circulo">
             </figure>
             <div id="lista">
                 <li>Antecedentes y Conceptos del Lavado de Dinero y Financiamiento al Terrorismo.</li>
@@ -44,7 +44,7 @@
                 <li>Tipologías y casos</li>
             </div>
             <figure class="personaje2">
-                <img src="../build/img/contenido/Pag01/personaje2.svg" alt="Personaje2">
+                <img src="./build/img/contenido/Pag01/personaje2.svg" alt="Personaje2">
             </figure>
         </div>
         <div id="cont-verde">
