--- a/contenido/pag03.html
+++ b/contenido/pag03.html
@@ -15,7 +15,7 @@
             <div class="cont-tarjeta">
                 <div class="imagenes">
                     <figure class="cont-imagen">
-                        <img src="../build/img/contenido/Pag03/lavadora.svg" alt="lavadora">
+                        <img src="./build/img/contenido/Pag03/lavadora.svg" alt="lavadora">
                     </figure> 
                 </div>
                 <p>Son los actos/operaciones que consisten en hacer que los fondos obtenidos a través de las comisión de delitos, aparezcan como el fruto de actividades legales y circulen sin problema en el sistema financiero.</p>  
@@ -27,7 +27,7 @@
             </p>
             <div class="imagenes">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag03/personaje.svg" alt="terroristas">
+                    <img src="./build/img/contenido/Pag03/personaje.svg" alt="terroristas">
                 </figure>
             </div>
         </div>
@@ -37,7 +37,7 @@
             <div class="cont-tarjeta">
                 <div class="imagenes">
                     <figure class="cont-imagen">
-                        <img src="../build/img/contenido/Pag03/terrorista.svg" alt="terroristas">
+                        <img src="./build/img/contenido/Pag03/terrorista.svg" alt="terroristas">
                     </figure>
                 </div>
                 <p>Proceso para obtener los bienes/recursos de procedencia lícita/ilícita, para presionar a los gobiernos generando terror/temor en la población a través de actos que ponen en peligro la vida, la integridad física o libertad, valiéndose de instrumentos capaces de causar estragos.</p>
