--- a/contenido/pag07.html
+++ b/contenido/pag07.html
@@ -11,7 +11,7 @@
 <body>
     <div id="pag07">
         <figure id="conversacion">
-            <img src="../build/img/contenido/Pag07/conversacion.svg" alt="conversacion">
+            <img src="./build/img/contenido/Pag07/conversacion.svg" alt="conversacion">
         </figure>
         <span id="entrevista">
             <h2>Objetivo de la entrevista</h2>
@@ -24,7 +24,7 @@
     </div>
     <div id="pag07-2">
         <figure class="personaje">
-            <img src="../build/img/contenido/Pag07/personaje.svg" alt="personaje">
+            <img src="./build/img/contenido/Pag07/personaje.svg" alt="personaje">
         </figure>
         <div id="globo">
             Elige tu perfil para identificar la herramienta que debes usar durante la entrevista.
