--- a/contenido/pag11.html
+++ b/contenido/pag11.html
@@ -10,7 +10,7 @@
     <div id="cont-intro11">
         <div class="instrucciones-mano">
             <div class="cont-imagen">
-                <img src="../build/img/contenido/Pag11/Mano.svg" alt="mano">
+                <img src="./build/img/contenido/Pag11/Mano.svg" alt="mano">
             </div>
             <p>
                 Da clic en cada tarjeta para conocer más detalles.
@@ -24,7 +24,7 @@
                     <h3>Operaciones relevantes</h3>
                 </div>
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag11/Billetes.svg" alt="billetes">
+                    <img src="./build/img/contenido/Pag11/Billetes.svg" alt="billetes">
                 </figure>
                 <div class="cont-mensaje-front">
                     <p>Operación en efectivo realizada una sola exhibición por el equivalente o más de $7,500 dólares.</p>
@@ -47,7 +47,7 @@
                     <h3>Operaciones inusuales</h3>
                 </div>
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag11/Lupa.svg" alt="lupa">
+                    <img src="./build/img/contenido/Pag11/Lupa.svg" alt="lupa">
                 </figure>
                 <div class="cont-mensaje-front">
                     <p>Operación o conducta que no concuerde con los antecedentes, actividades, operaciones o conductas del cliente.</p>
@@ -68,7 +68,7 @@
                     <h3>Operaciones internas preocupantes</h3>
                 </div>
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag11/Persona.svg" alt="persona">
+                    <img src="./build/img/contenido/Pag11/Persona.svg" alt="persona">
                 </figure>
                 <div class="cont-mensaje-front">
                     <p>Operaciones o conductas realizadas por los Colaboradores de la Compañía relacionadas con el LD y FT.
