--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -41,7 +41,7 @@
         <div id="columnas">
             <div id="columna1">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag19/persona-pizarra.svg" alt="">
+                    <img src="./build/img/contenido/Pag19/persona-pizarra.svg" alt="">
                 </figure>
                 <div class="cuadro">
                     <div class="titulo">
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <figure class="cont-imagen">
-                            <img src="../build/img/contenido/Pag19/persona-esc.svg" alt="">
+                            <img src="./build/img/contenido/Pag19/persona-esc.svg" alt="">
                         </figure>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                 <div class="columnas">
                     <div class="tarjetas1_1" id="card1">
                         <figure class="cont-imagen">
-                            <img src="../build/img/contenido/Pag19/circulo1.svg" alt="">
+                            <img src="./build/img/contenido/Pag19/circulo1.svg" alt="">
                         </figure>
                         <div class="info" id="info1">
                             <p>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="tarjetas1_1" id="card2">
                         <figure class="cont-imagen">
-                            <img src="../build/img/contenido/Pag19/circulo2.svg" alt="">
+                            <img src="./build/img/contenido/Pag19/circulo2.svg" alt="">
                         </figure>
                         <div class="info" id="info2">
                             <p>
@@ -116,7 +116,7 @@
 
                 <div class="tarjetas1_1" id="card3">
                     <figure class="cont-imagen">
-                        <img src="../build/img/contenido/Pag19/circulo3.svg" alt="">
+                        <img src="./build/img/contenido/Pag19/circulo3.svg" alt="">
                     </figure>
                     <div class="info" id="info3">
                         <p>
@@ -132,7 +132,7 @@
                 </div>
                 <div class="tarjetas1_1" id="card4">
                     <figure class="cont-imagen">
-                        <img src="../build/img/contenido/Pag19/circulo4.svg" alt="">
+                        <img src="./build/img/contenido/Pag19/circulo4.svg" alt="">
                     </figure>
                     <div class="info" id="info4">
                         <p>
