--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -11,7 +11,7 @@
 <body>
     <div id="instrucciones-pag20">
         <figure class="img-clic">
-            <img src="../build/img/contenido/Pag20/icon2click.svg" alt="Mano">
+            <img src="./build/img/contenido/Pag20/icon2click.svg" alt="Mano">
         </figure>
         <p>
             Da clic en cada tarjeta para conocer más sobre cuál es la misión del Manual de Cumplimiento PLD/CFT.
@@ -23,7 +23,7 @@
         <div class="cards" id="flip1">
             <div class="front caras">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/libro-azul.svg" alt="Flip Card">
+                    <img src="./build/img/contenido/Pag20/libro-azul.svg" alt="Flip Card">
                 </figure>
             </div>
             <div class="back caras">
@@ -36,7 +36,7 @@
         <div class="cards" id="flip2">
             <div class="front caras">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/libro-naranja.svg" alt="Flip Card">
+                    <img src="./build/img/contenido/Pag20/libro-naranja.svg" alt="Flip Card">
                 </figure>
             </div>
             <div class="back caras">
@@ -51,7 +51,7 @@
         <div class="cards" id="flip3">
             <div class="front caras">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/libro-amarillo.svg" alt="Flip Card">
+                    <img src="./build/img/contenido/Pag20/libro-amarillo.svg" alt="Flip Card">
                 </figure>
             </div>
             <div class="back caras">
@@ -67,7 +67,7 @@
         <div class="cards" id="flip4">
             <div class="front caras">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/libro-verde.svg" alt="Flip Card">
+                    <img src="./build/img/contenido/Pag20/libro-verde.svg" alt="Flip Card">
                 </figure>
             </div>
             <div class="back caras">
@@ -84,7 +84,7 @@
         <div class="cards" id="flip5">
             <div class="front caras">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/libro-azur.svg" alt="Flip Card">
+                    <img src="./build/img/contenido/Pag20/libro-azur.svg" alt="Flip Card">
                 </figure>
             </div>
             <div class="back caras">
@@ -103,7 +103,7 @@
 
     <div id="instrucciones2-pag20">
         <figure class="img-clic">
-            <img src="../build/img/contenido/Pag20/icon2click.svg" alt="Mano">
+            <img src="./build/img/contenido/Pag20/icon2click.svg" alt="Mano">
         </figure>
         <p>
             Da clic en el icono de cada Diferencia para conocer en qué se distinguen el Lavado de Dinero del
@@ -142,7 +142,7 @@
                 <p>Propósito del Delito</p>
                 <a class="btn-pag20" data-cuadro="1">
                     <figure class="cont-imagen">
-                        <img src="../build/img/contenido/Pag20/cuadro-front.svg" alt="Boton">
+                        <img src="./build/img/contenido/Pag20/cuadro-front.svg" alt="Boton">
                     </figure>
                 </a>
             </div>
@@ -150,7 +150,7 @@
                 <p>Fuente o procedencia de los fondos</p>
                 <a class="btn-pag20" data-cuadro="2">
                     <figure class="cont-imagen">
-                        <img src="../build/img/contenido/Pag20/cuadro-front.svg" alt="Boton">
+                        <img src="./build/img/contenido/Pag20/cuadro-front.svg" alt="Boton">
                     </figure>
                 </a>
             </div>
@@ -158,7 +158,7 @@
                 <p>Volumen de fondos</p>
                 <a class="btn-pag20" data-cuadro="3">
                     <figure class="cont-imagen">
-                        <img src="../build/img/contenido/Pag20/cuadro-front.svg" alt="Boton">
+                        <img src="./build/img/contenido/Pag20/cuadro-front.svg" alt="Boton">
                     </figure>
                 </a>
             </div>
@@ -166,7 +166,7 @@
                 <p>Momento del Delito</p>
                 <a class="btn-pag20" data-cuadro="4">
                     <figure class="cont-imagen">
-                        <img src="../build/img/contenido/Pag20/cuadro-front.svg" alt="Boton">
+                        <img src="./build/img/contenido/Pag20/cuadro-front.svg" alt="Boton">
                     </figure>
                 </a>
             </div>
@@ -210,7 +210,7 @@
             <b>Momento del Delito</b>
             <a class="btn-pag20-2" data-cuadro="1">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/boton-tel.svg" alt="Boton">
+                    <img src="./build/img/contenido/Pag20/boton-tel.svg" alt="Boton">
                 </figure>
             </a>
         </div>
@@ -235,7 +235,7 @@
             <b>Momento del Delito</b>
             <a class="btn-pag20-2" data-cuadro="2">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/boton-tel.svg" alt="Boton">
+                    <img src="./build/img/contenido/Pag20/boton-tel.svg" alt="Boton">
                 </figure>
             </a>
         </div>
@@ -260,7 +260,7 @@
             <p><b>Momento del Delito</b></p>
             <a class="btn-pag20-2" data-cuadro="3">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/boton-tel.svg" alt="Boton">
+                    <img src="./build/img/contenido/Pag20/boton-tel.svg" alt="Boton">
                 </figure>
             </a>
         </div>
@@ -285,7 +285,7 @@
             <p><b>Momento del Delito</b></p>
             <a class="btn-pag20-2" data-cuadro="4">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag20/boton-tel.svg" alt="Boton">
+                    <img src="./build/img/contenido/Pag20/boton-tel.svg" alt="Boton">
                 </figure>
             </a>
         </div>
@@ -301,7 +301,7 @@
 
     <div id="instrucciones3-pag20">
         <figure class="img-clic">
-            <img src="../build/img/contenido/Pag20/icon2click.svg" alt="Mano">
+            <img src="./build/img/contenido/Pag20/icon2click.svg" alt="Mano">
         </figure>
         <p>
             Da clic en cada icono para conocer las semejanzas entre el Lavado de Dinero y el Financiamiento al
@@ -313,22 +313,22 @@
         <div id="maletines">
             <a class="btn2-pag20" href="#maletin1">
                 <figure class="img-maletin">
-                    <img src="../build/img/contenido/Pag20/maletin-amarillo.svg" alt="Maletin">
+                    <img src="./build/img/contenido/Pag20/maletin-amarillo.svg" alt="Maletin">
                 </figure>
             </a>
             <a class="btn2-pag20" href="#maletin2">
                 <figure class="img-maletin">
-                    <img src="../build/img/contenido/Pag20/maletin-verde.svg" alt="Maletin">
+                    <img src="./build/img/contenido/Pag20/maletin-verde.svg" alt="Maletin">
                 </figure>
             </a>
             <a class="btn2-pag20" href="#maletin3">
                 <figure class="img-maletin">
-                    <img src="../build/img/contenido/Pag20/maletin-azul.svg" alt="Maletin">
+                    <img src="./build/img/contenido/Pag20/maletin-azul.svg" alt="Maletin">
                 </figure>
             </a>
             <a class="btn2-pag20" href="#maletin4">
                 <figure class="img-maletin">
-                    <img src="../build/img/contenido/Pag20/maletin-rojo.svg" alt="Maletin">
+                    <img src="./build/img/contenido/Pag20/maletin-rojo.svg" alt="Maletin">
                 </figure>
             </a>
         </div>
@@ -381,7 +381,7 @@
         </div>
         <a class="btn2-pag20Tel" href="#maletin1-Tel">
             <figure class="img-maletin">
-                <img src="../build/img/contenido/Pag20/maletin-amarilloTel.svg" alt="Maletin Tel">
+                <img src="./build/img/contenido/Pag20/maletin-amarilloTel.svg" alt="Maletin Tel">
             </figure>
         </a>
         <div class="info" id="maletin1-Tel">
@@ -389,7 +389,7 @@
         </div>
         <a class="btn2-pag20Tel" href="#maletin2-Tel">
             <figure class="img-maletin">
-                <img src="../build/img/contenido/Pag20/maletin-verdeTel.svg" alt="Maletin Tel">
+                <img src="./build/img/contenido/Pag20/maletin-verdeTel.svg" alt="Maletin Tel">
             </figure>
         </a>
         <div class="info" id="maletin2-Tel">
@@ -397,7 +397,7 @@
         </div>
         <a class="btn2-pag20Tel" href="#maletin3-Tel">
             <figure class="img-maletin">
-                <img src="../build/img/contenido/Pag20/maletin-azulTel.svg" alt="Maletin Tel">
+                <img src="./build/img/contenido/Pag20/maletin-azulTel.svg" alt="Maletin Tel">
             </figure>
         </a>
         <div class="info" id="maletin3-Tel">
@@ -405,7 +405,7 @@
         </div>        
         <a class="btn2-pag20Tel" href="#maletin4-Tel">
             <figure class="img-maletin">
-                <img src="../build/img/contenido/Pag20/maletin-rojoTel.svg" alt="Maletin Tel">
+                <img src="./build/img/contenido/Pag20/maletin-rojoTel.svg" alt="Maletin Tel">
             </figure>
         </a>
         <div class="info" id="maletin4-Tel">
