--- a/contenido/pag21.html
+++ b/contenido/pag21.html
@@ -9,7 +9,7 @@
 <body>
     <div class="intro-pagina21">
         <figure class="cont-imagen">
-            <img src="../build/img/contenido/Pag21/persona1.svg" alt="persona">
+            <img src="./build/img/contenido/Pag21/persona1.svg" alt="persona">
         </figure>
         <div class="cont-mensaje">
             <p>Finalizaste la segunda parte de tu curso PLD/CFT. ¡Es momento de una actividad para saber que tanto has aprendidos de los dos primeros temas que has revisado! Lee con cuidado los enunciados de la primera columna y únelos con el concepto que le corresponde en la segunda columna. Si estás listo, da clic en el botón.</p>
@@ -23,14 +23,14 @@
     <div id="cont-actividadRelacion">
         <div class="instrucciones-mano instrucciones1">
             <div class="cont-imagen">
-                <img src="../build/img/contenido/Pag21/Mano.svg" alt="">
+                <img src="./build/img/contenido/Pag21/Mano.svg" alt="">
             </div>
             <p>Lee con cuidado los enunciados de la primera columna y únelos con el concepto que le corresponde en la segunda columna.</p>
         </div>
         
         <div class="instrucciones-mano instrucciones2">
             <div class="cont-imagen">
-                <img src="../build/img/contenido/Pag21/Mano.svg" alt="">
+                <img src="./build/img/contenido/Pag21/Mano.svg" alt="">
             </div>
             <p>Lee el enunciado y selecciona el concepto que le corresponde. </p>
         </div>
@@ -271,7 +271,7 @@
 
     <div id="mensaje21">
         <div class="cont-imagen">
-            <img src="/build/img/contenido/Pag21/persona2.svg" alt="persona">
+            <img src="./build/img/contenido/Pag21/persona2.svg" alt="persona">
         </div>
         <div class="cont-mensaje">
             <p>¡Excelente trabajo! Estás listo para continuar con la tercera y última parte de tu curso PLD/CFT.
