--- a/contenido/pag23.html
+++ b/contenido/pag23.html
@@ -10,7 +10,7 @@
     <div class="contenedorPag23">
         <div class="cont-mano">
             <figure class="cont-imagen">
-                <img src="../build/img/contenido/Pag23/Mano.svg" alt="icono click">
+                <img src="./build/img/contenido/Pag23/Mano.svg" alt="icono click">
             </figure>
             <p>
                 Da clic en el nombre de cada organismo para conocer sus funciones.
@@ -25,7 +25,7 @@
                             Sistema Financiero Mexicano
                         </h3>
                         <figure class="cont-imagen">
-                            <img src="/build/img/contenido/Pag23/mapa.svg"   alt="">
+                            <img src="./build/img/contenido/Pag23/mapa.svg"   alt="">
                         </figure>
                     </div>
                 </a>
@@ -47,7 +47,7 @@
                             Organismo Internacional
                         </h3>
                         <figure class="cont-imagen mitad">
-                            <img src="../build/img/contenido/Pag23/gafi.svg" alt="">
+                            <img src="./build/img/contenido/Pag23/gafi.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -65,7 +65,7 @@
                             Organismos Reguladores
                         </h3>
                         <figure class="cont-imagen">
-                            <img src="../build/img/contenido/Pag23/grupo1.svg" alt="">
+                            <img src="./build/img/contenido/Pag23/grupo1.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -84,7 +84,7 @@
                             Organismos Supervisores
                         </h3>
                         <figure class="cont-imagen">
-                            <img src="../build/img/contenido/Pag23/grupo2.svg" alt="">
+                            <img src="./build/img/contenido/Pag23/grupo2.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -101,7 +101,7 @@
                             Unidad de Inteligencia Financiera
                         </h3>
                         <figure class="cont-imagen mitad">
-                            <img src="../build/img/contenido/Pag23/uif.svg" alt="">
+                            <img src="./build/img/contenido/Pag23/uif.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -117,7 +117,7 @@
 
         <div class="cont-mano">
             <figure class="cont-imagen">
-                <img src="../build/img/contenido/Pag23/Mano.svg" alt="icono click">
+                <img src="./build/img/contenido/Pag23/Mano.svg" alt="icono click">
             </figure>
             <p>
                 Da clic en el nombre de cada organismo para conocer sus funciones.
@@ -129,7 +129,7 @@
                 <a class="btnImagen" href="#gafi">
                     <div class="imagen">
                         <figure class="cont-imagen">
-                            <img id="img-GAFI" src="../build/img/contenido/Pag23/gafi.svg" alt="">
+                            <img id="img-GAFI" src="./build/img/contenido/Pag23/gafi.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -143,7 +143,7 @@
                 <a class="btnImagen" href="#shcp">
                     <div class="imagen">
                         <figure class="cont-imagen">
-                            <img id="img-SHPC" src="../build/img/contenido/Pag23/shcp.svg" alt="">
+                            <img id="img-SHPC" src="./build/img/contenido/Pag23/shcp.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -157,7 +157,7 @@
                 <a class="btnImagen" href="#uif">
                     <div class="imagen">
                         <figure class="cont-imagen">
-                            <img id="img-UIF" src="../build/img/contenido/Pag23/uif.svg" alt="">
+                            <img id="img-UIF" src="./build/img/contenido/Pag23/uif.svg" alt="">
                         </figure>
                     </div>
                 </a>
@@ -171,7 +171,7 @@
                 <a class="btnImagen" href="#cnsf">
                     <div class="imagen">
                         <figure class="cont-imagen">
-                            <img id="img-CNSF" src="../build/img/contenido/Pag23/cnsf.svg" alt="">
+                            <img id="img-CNSF" src="./build/img/contenido/Pag23/cnsf.svg" alt="">
                         </figure>
                     </div>
                 </a>
