--- a/contenido/pag25.html
+++ b/contenido/pag25.html
@@ -9,7 +9,7 @@
 <body>
     <div id="intro-actividad25">
         <figure class="cont-imagen">
-            <img src="../build/img/contenido/Pag25/mujer.svg" alt="mujer">
+            <img src="./build/img/contenido/Pag25/mujer.svg" alt="mujer">
         </figure>
         <div class="instrucciones">
             <p>¡Ha llegado el momento de realizar la última  actividad! Relaciona el nombre del concepto con la definición del mismo, arrastrando las etiquetas donde corresponda.</p>
@@ -25,7 +25,7 @@
         <div id="cont-definiciones">
             <div class="cont-mano">
                 <figure class="cont-imagen">
-                    <img src="../build/img/contenido/Pag25/Mano.svg" alt="mano">
+                    <img src="./build/img/contenido/Pag25/Mano.svg" alt="mano">
                 </figure>
                 <p>
                     Arrastra las etiquetas debajo de la definición que le corresponda.
@@ -46,7 +46,7 @@
 
         <div class="mano-responsive instrucciones-mano">
             <div class="cont-imagen">
-                <img src="../build/img/contenido/Pag25/Mano.svg" alt="mano">
+                <img src="./build/img/contenido/Pag25/Mano.svg" alt="mano">
             </div>
             <p>Pulsa el nombre del concepto que corresponda a la definición.</p>
         </div>
@@ -347,7 +347,7 @@
 
     <div id="box">
         <div class="cont-imagen">
-            <img src="../build/img/contenido/Pag25/mujer-bien.svg" alt="Bien">
+            <img src="./build/img/contenido/Pag25/mujer-bien.svg" alt="Bien">
         </div>
         <div class="cont-mensaje">
             <p>¡Excelente! Has terminado de colocar todas las etiquetas de conceptos con su definición correctamente.</p>
