:pushpin: cambio de respuestas

--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -29,7 +29,7 @@
             </div>
             <div class="cont-botones">
                 <a class="btn-casos" id="aseguradora" href="#caso-aseguradora">Caso Aseguradora</a>
-                <a class="btn-casos" id="patria" href="#caso-patria">Caso Patria</a>
+                <a class="btn-casos" id="patria" href="#caso-patria">Caso Genérico</a>
                 <a class="btn-casos" id="reaseguradora" href="#caso-reaseguradora">Caso Reaseguradora</a>
             </div>
         </div>
@@ -173,7 +173,7 @@
                             <h4>A)</h4>
                         </div>
                         <div id="respuestaA1_1" class="respuesta">
-                            <p>Deberíamos explorar la posibilidad de permitirle el pago en efectivo, ya que el cliente tiene toda la disposición de hacerlo por sus motivos personales.
+                            <p>La Compañía no acepta pagos en efectivo en caja, sin embargo, el cliente tiene la posibilidad de hacer el pago en efectivo en alguna institución bancaria a través referencia bancaria a la cuenta de la Compañía. 
                             </p>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                             <h4>B)</h4>
                         </div>
                         <div id="respuestaB3_1" class="respuesta">
-                            <p>El Agente ya se quejó con mi superior y eso me puede traer consecuencias, mejor hacerle caso a las peticiones del Agente y no a los procesos institucionales...
+                            <p>No, la identificación se debe de realizar de acuerdo con Políticas y al cúmulo de la prima. 
                             </p>
                         </div>
                     </div>
@@ -626,7 +626,7 @@
                   <div class="carousel-item active">
                     <div class="w-100">
                         <div class="informacion">
-                            <p>Reaseguradora Patria tiene negocio con una Cedente Italiana desde hace varios años. Recientemente a través del sistema automatizado  de gestión de PLD/CFT se detecta que la Cedente tiene omportamientos inusuales en las transferencias de fondos que le realiza a Reaseguradora Patria; que constan en transferencias bancarias internacionales desde más de veinte cuentas distintas a nombre de la Cedente.</p>
+                            <p>Reaseguradora Patria tiene negocio con una Cedente Italiana desde hace varios años. Recientemente a través del sistema automatizado  de gestión de PLD/CFT se detecta que la Cedente tiene comportamientos inusuales en las transferencias de fondos que le realiza a Reaseguradora Patria; que constan en transferencias bancarias internacionales desde más de veinte cuentas distintas a nombre de la Cedente.</p>
                         </div>
                         <figure class="cont-imagen">
                             <img src="./build/img/contenido/Pag26/icono10.svg" alt="icono">
